# openapi-python-client

./: .PR_note.md  .deepsource.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dobby.toml  integration-tests-config.yaml  knope.toml  mypy.ini  pyproject.toml  setup.py  usage.md
end_to_end_tests/golden-record/: README.md  pyproject.toml
end_to_end_tests/golden-record-skip-read-only/: README.md  pyproject.toml
end_to_end_tests/golden-record-skip-read-only/my_read_only_properties_api_client/: __init__.py
end_to_end_tests/golden-record-skip-read-only/my_read_only_properties_api_client/api/things/: post_thing_json.py  post_thing_multipart.py
end_to_end_tests/golden-record-skip-read-only/my_read_only_properties_api_client/models/: __init__.py  thing.py
end_to_end_tests/golden-record/my_test_api_client/: __init__.py  client.py  errors.py  models.py  types.py
end_to_end_tests/golden-record/my_test_api_client/api/bodies/: json_like.py  optional_body.py  post_bodies_multiple.py  refs.py
end_to_end_tests/golden-record/my_test_api_client/api/buildings/: get_v1_buildings.py
end_to_end_tests/golden-record/my_test_api_client/api/config/: content_type_override.py
end_to_end_tests/golden-record/my_test_api_client/api/default/: get_common_parameters.py  get_models_allof.py  get_models_oneof_with_required_const.py  get_naming_properties.py  ping_ping_get.py  post_common_parameters.py  post_types_unions_duplicate_types.py  reserved_parameters.py
end_to_end_tests/golden-record/my_test_api_client/api/defaults/: defaults_tests_defaults_post.py
end_to_end_tests/golden-record/my_test_api_client/api/naming/: hyphen_in_path.py  (+2 more)
end_to_end_tests/golden-record/my_test_api_client/models/: __init__.py  a_discriminated_union_type_1.py  a_discriminated_union_type_2.py  a_form_data.py  a_model.py  a_model_model.py  a_model_not_required_model.py  a_model_not_required_nullable_model.py  a_model_nullable_enum_inline.py  a_model_nullable_model.py  a_model_with_direct_self_reference_property.py  a_model_with_indirect_reference_property.py  a_model_with_indirect_self_reference_property.py  a_model_with_optional_property_ref_and_default_value.py  a_model_with_properties_reference_that_are_not_object.py  all_of_has_properties_but_no_type.py  all_of_has_properties_but_no_type_type_enum.py  all_of_required_base.py  all_of_required_derived.py  all_of_sub_model.py  all_of_sub_model_type_enum.py  an_all_of_enum.py  an_array_with_a_circular_ref_in_items_object_a_item.py  an_array_with_a_circular_ref_in_items_object_additional_properties_a_item.py  an_array_with_a_circular_ref_in_items_object_additional_properties_b_item.py  an_array_with_a_circular_ref_in_items_object_b_item.py  an_array_with_a_recursive_ref_in_items_object_additional_properties_item.py  an_array_with_a_recursive_ref_in_items_object_item.py  an_enum.py  an_enum_with_null.py  an_enum_with_only_null.py  an_int_enum.py  another_all_of_sub_model.py  another_all_of_sub_model_type.py  another_all_of_sub_model_type_enum.py  body_upload_file_tests_upload_post.py  body_upload_file_tests_upload_post_additional_property.py  body_upload_file_tests_upload_post_some_nullable_object.py  body_upload_file_tests_upload_post_some_object.py  body_upload_file_tests_upload_post_some_optional_object.py  (+91 more)
end_to_end_tests/multiple-media-types-golden-record/: README.md  pyproject.toml
end_to_end_tests/multiple-media-types-golden-record/multiple_media_types_client/: __init__.py
end_to_end_tests/multiple-media-types-golden-record/multiple_media_types_client/models/: __init__.py  error_response.py  error_response_detail.py
integration-tests/: README.md  config.yaml  pyproject.toml
integration-tests/integration_tests/: __init__.py  client.py  types.py
integration-tests/integration_tests/api/body/: post_body_multipart.py
integration-tests/integration_tests/api/parameters/: post_parameters_header.py
integration-tests/integration_tests/models/: __init__.py  an_object.py  file.py  post_body_multipart_body.py  post_body_multipart_multipart_data.py  post_body_multipart_response_200.py  post_body_multipart_response_200_files_item.py  post_parameters_header_response_200.py  problem.py  public_error.py
integration-tests/tests/: conftest.py
integration-tests/tests/test_api/test_body/: test_post_body_multipart.py
integration-tests/tests/test_api/test_parameters/: test_post_parameters_header.py
openapi_python_client/templates/: README.md  README.md.jinja  api_helpers.py.jinja  api_init.py.jinja  async_endpoint_module.pyi  client.py.jinja  client.pyi  date_property.pyi  datetime_property.pyi  dlt_config.toml.jinja  endpoint_init.py.jinja  endpoint_macros.py.jinja  endpoint_macros.pyi  endpoint_module.py.jinja  endpoint_module.pyi  enum.pyi  enum_list_property.pyi  enum_property.pyi  errors.py.jinja  errors.pyi  helpers.jinja  int_enum.py.jinja  int_enum.pyi  list_property.pyi  literal_enum.py.jinja  model.py.jinja  model.pyi  models.py.jinja  models_init.pyi  null_enum.py.jinja  package_init.py.jinja  package_init.pyi  package_macros.py.jinja  pagination.py.jinja  pipeline.py.jinja  pyproject.toml  pyproject.toml.jinja  pyproject_no_poetry.toml.jinja  pyproject_pdm.toml.jinja  pyproject_poetry.toml.jinja  (+20 more)
openapi_python_client/templates/property_templates/: any_property.py.jinja  boolean_property.py.jinja  const_property.py.jinja  date_property.py.jinja  date_property.pyi  datetime_property.py.jinja  datetime_property.pyi  dict_property.pyi  enum_property.py.jinja  enum_property.pyi  file_property.py.jinja  file_property.pyi  float_property.py.jinja  helpers.jinja  int_property.py.jinja  list_property.py.jinja  list_property.pyi  literal_enum_property.py.jinja  model_property.py.jinja  model_property.pyi  none_property.py.jinja  none_property.pyi  property_macros.py.jinja  ref_property.pyi  union_property.py.jinja  union_property.pyi  uuid_property.py.jinja
tests/test_end_to_end/golden-master/: README.md  pyproject.toml
tests/test_end_to_end/golden-master/my_test_api_client/: __init__.py  client.py
(+749 files in other folders)
