[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = "{{ description }}"

authors = []

readme = "README.md"
packages = [
    {include = "{{ package_name }}"},
]
include = ["CHANGELOG.md", "{{ package_name }}/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.12.1"

[tool.black]
line-length = 120
target_version = ['py38']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''
