[tool.poetry]
name = "{{ project_name }}"
version = "{{ version }}"
description = "{{ description }}"

authors = []

readme = "README.md"
packages = [
    {include = "{{ package_name }}"},
]
include = ["CHANGELOG.md", "{{ package_name }}/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.13.3"
attrs = "^20.1.0"
python-dateutil = "^2.8.1"

[tool.black]
line-length = 120
target_version = ['py38']
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
  )/
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
